--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Avia Clinic Management System - Manage patients, appointments, prescriptions, billing, and inventory" />
+    <meta name="description" content="Avia Wellness Clinic Management System - Manage patients, appointments, prescriptions, billing, and inventory" />
     <meta name="theme-color" content="#2563eb" />
     
     <!-- Fonts -->
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     
-    <title>Avia Clinic Management System</title>
+    <title>Avia Wellness Clinic</title>
   </head>
   <body>
     <div id="root"></div>
